# dice-parser

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml  lint.yml  test.yml
dice_parser/: __init__.py  __main__.py  cache.py  dice.py  dice_ast.py  errors.py  expression.py  grammar.lark  stringifiers.py  utils.py
docs/: api.rst  ast.rst  conf.py  expression.rst  index.rst  quickstart.rst  utils.rst
docs/extensions/: resource_links.py
tests/: conftest.py  test_arguments.py  test_dice.py  test_utils.py
